--- a/src/weblog/templates/blog/base.html
+++ b/src/weblog/templates/blog/base.html
@@ -2,29 +2,58 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.2/css/bulma.css" rel="stylesheet"  crossorigin="anonymous" />
-    <link href="{% static 'css/main.css' %}" rel="stylesheet" />
-    <script src="{% static 'js/main.js' %}"></script>
-    {% block head %}
-    <title>Blog</title>
-    {% endblock head %}
-  </head>
-  <body>
-    {% block header %}
-      {% include 'blog/common/header.html' %}
-    {% endblock header %}
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <main class="container">
-      {% block content %}
-      {% endblock content %}
-    </main>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.2/css/bulma.css" rel="stylesheet"
+    crossorigin="anonymous" />
+  <link href="{% static 'css/main.css' %}" rel="stylesheet" />
+  <script src="{% static 'js/main.js' %}"></script>
+  {% block head %}
+  <title>Blog</title>
+  {% endblock head %}
+</head>
 
-    {% block footer %}
-      {% include 'blog/common/footer.html' %}
-    {% endblock footer %}
-  </body>
+<body>
+  {% block header %}
+  {% include 'blog/common/header.html' %}
+  {% endblock header %}
+
+  <main class="container">
+    <div class="columns is-centered is-vcentered mt-6">
+      
+        {% block content %}
+
+        {% endblock content %}
+        
+      <div class="side-bar column is-3">
+        <aside class="menu side-bar-menu">
+          <p class="title is-3">Our Sidebar</p>
+          <p class="subtitle">Any information aqui</p>
+          <ul class="menu-list">
+            <li>
+              <a href="">Latest Posts</a>
+            </li>
+            <li>
+              <a href="">Announcements</a>
+            </li>
+            <li>
+              <a href="">Calendars</a>
+            </li>
+            <li>
+              <a href="">etc</a>
+            </li>
+          </ul>
+        </aside>
+      </div>
+    </div>
+  </main>
+
+  {% block footer %}
+  {% include 'blog/common/footer.html' %}
+  {% endblock footer %}
+</body>
+
 </html>
