--- a/src/weblog/templates/blog/common/header.html
+++ b/src/weblog/templates/blog/common/header.html
@@ -26,10 +26,10 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary" href="{% url 'home' %}">
+            <a class="button is-primary" href="{% url 'register' %}">
               <strong>Sign up</strong>
             </a>
-            <a class="button is-light" href="{% url 'home' %}">
+            <a class="button is-light" href="{% url 'login' %}">
               Log in
             </a>
           </div>
