--- a/src/weblog/templates/blog/index.html
+++ b/src/weblog/templates/blog/index.html
@@ -1,9 +1,34 @@
 {% extends 'blog/base.html' %}
 
 {% block head %}
-  <title>Home</title>
+<title>Home</title>
 {% endblock %}
 
 {% block content %}
+
+{% for post in posts %}
+<div class="column is-3">
+  <div class="card">
+    <div class="card-content">
+      <div class="media">
+        <div class="media-left">
+          <figure class="image is-48x48">
+            <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+          </figure>
+        </div>
+        <div class="media-content">
+          <div class="title is-4">{{ post.title }}</div>
+          <div class="subtitle is-6">@{{ post.author }}</div>
+        </div>
+      </div>
+      <div class="content">
+        {{post.content}}
+        <br>
+        <time datetime="{{ post.date_posted}} ">{{ post.date_posted|date:"F d, Y" }}</time>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
 
 {% endblock content %}
