add login, register pages

--- a/src/weblog/templates/blog/about.html
+++ b/src/weblog/templates/blog/about.html
@@ -1,8 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block head %}
-  <title>About</title>
+<title>About</title>
 {% endblock %}
 
 {% block content %}
+<div class="columns is-centered is-vcentered mt-6">
+</div>
 {% endblock content %}
